--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "express": "^4.16.4",
+    "mongoose": "^5.9.27",
+    "morgan": "^1.9.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.6.0"
   }
 }
