--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -11,7 +11,8 @@
     "debug": "~2.6.9",
     "express": "^4.16.4",
     "mongoose": "^5.9.27",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "nodemon": "^2.0.4"
   },
   "devDependencies": {
     "eslint": "^7.6.0"
