--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.16.4",
+    "moment": "^2.27.0",
     "mongoose": "^5.9.27",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.4"
