--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,9 @@
     "nodemon": "^2.0.4"
   },
   "devDependencies": {
-    "eslint": "^7.6.0"
+    "eslint": "^7.6.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.0.5"
   }
 }
