--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.27.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-styled-components": "^1.5.1",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
