--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,6 @@
     "moment": "^2.27.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vue-styled-components": "^1.5.1",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -28,6 +27,8 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^1.19.1",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.3",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
