--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "cytoscape-cxtmenu": "^3.1.2",
     "cytoscape-edgehandles": "^3.6.0",
     "moment": "^2.27.0",
+    "quill": "^1.3.7",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
