--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "cytoscape": "^3.15.2",
+    "cytoscape-cola": "^2.4.0",
     "cytoscape-cxtmenu": "^3.1.2",
     "cytoscape-edgehandles": "^3.6.0",
     "moment": "^2.27.0",
