--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -1,7 +1,8 @@
 {
     "extends": ["plugin:prettier/recommended"],
+    "parser": "babel-eslint",
     "parserOptions": {
-        "ecmaVersion": 2017
+        "sourceType": "module"
     },
 
     "env": {
