--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
