--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "moment": "^2.27.0",
     "mongoose": "^5.9.27",
     "morgan": "^1.9.1",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.5",
