--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon --exec babel-node ./bin/www"
   },
   "dependencies": {
+    "aws-sdk": "^2.747.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
