--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.27.0",
     "mongoose": "^5.9.27",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.4",
     "winston": "^3.3.3"
   },
