--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^5.9.27",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "nodemon": "^2.0.4",
     "winston": "^3.3.3"
   },
