--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,16 @@ version: '3.5'
 services:
   nodejs:
     container_name: nodejs
+    env_file:
+      - ../.env
     build: ~/0525/backend/
     ports:
-      - "3000:3000"  
+      - "3000:3000"
   mongo:
     image: mongo
     container_name: mongo
+    env_file:
+      - ../.env
     volumes:
       - type: bind
         source: /var/lib/mongodb
