--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "nodemon": "^2.0.4",
+    "uuid4": "^2.0.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
