--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,13 @@
     "cytoscape-cose-bilkent": "^4.1.0",
     "cytoscape-cxtmenu": "^3.1.2",
     "cytoscape-edgehandles": "^3.6.0",
+    "jwt-decode": "^3.0.0-beta.2",
     "moment": "^2.27.0",
     "quill": "^1.3.7",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-persistedstate": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
