--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,31 @@
-version: '3.5'
-
+version: "3"
 services:
-  nodejs:
-    container_name: nodejs
-    env_file:
-      - ../.env
-    build: ~/0525/backend/
+  frontend:
+    build:
+      dockerfile: Dockerfile
+      context: ./frontend
+    container_name: frontend
+    stdin_open: true
+
+  nginx:
+    restart: always
+    build:
+      dockerfile: Dockerfile
+      context: ./nginx
+    container_name: nginx
     ports:
-      - "3000:3000"
+      - "80:80"
+
+  backend:
+    build:
+      dockerfile: Dockerfile
+      context: ./backend
+    container_name: backend
+
   mongo:
-    image: mongo
+    build:
+      dockerfile: Dockerfile
+      context: ./mongo
     container_name: mongo
-    env_file:
-      - ../.env
     volumes:
-      - type: bind
-        source: /var/lib/mongodb
-        target: /var/lib/mongodb
-networks:
-  default:
-    external:
-      name: vans
+      - /var/lib/mongodb:/var/lib/mongodb
