--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -16,6 +16,11 @@ server{
         proxy_pass http://backend;
     }
 
+    location /ml {
+        include uwsgi_params; 
+        uwsgi_pass flask:5050;
+    }
+
     location /sockjs-node {
         proxy_pass http://frontend;
         proxy_http_version 1.1;
