--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "connect-history-api-fallback": "^1.6.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "crypto-random-string": "^3.3.0",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
