--- a/ml/dockerfile
+++ b/ml/dockerfile
@@ -1,11 +1,14 @@
-FROM python:3 
+FROM python:3.8
 WORKDIR /app 
 ADD . /app 
 # RUN source myvenv/bin/activate
-RUN pip install numpy
-RUN pip install scipy
+# RUN pip install numpy
+# RUN pip install scipy
 RUN pip install -r requirements.txt
 # RUN apt install python3-scipy
 # RUN apt-get install gfortran libopenblas-dev liblapack-dev
 # RUN pip3 install scipy==1.2.1
-CMD ["uwsgi","uwsgi.ini"]
+RUN pip install uWSGI
+EXPOSE 5000
+# CMD ["uwsgi","uwsgi.ini"]
+CMD ["flask","run"]
