--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,6 +4,9 @@ upstream frontend {
 upstream backend {
     server backend:3000;
 }
+upstream ml {
+    server ml:5000;
+}
 
 server{
     listen 80;
@@ -17,8 +20,7 @@ server{
     }
 
     location /ml {
-        include uwsgi_params; 
-        uwsgi_pass flask:5050;
+        proxy_pass http://ml;
     }
 
     location /sockjs-node {
