--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -15,6 +15,8 @@ services:
       dockerfile: Dockerfile
       context: ./ml
     container_name: ml
+    expose:
+        - 5000
 
   nginx:
     restart: always
