--- a/ml/uwsgi.ini
+++ b/ml/uwsgi.ini
@@ -1,9 +1,10 @@
-wsgi-file = app.py 
-callable = app 
+[uwsgi]
+wsgi-file = app.py
+callable = app
 socket = :5000
-processes = 4 
-threads = 2 
-master = true 
-vacum = true
-chmod-socket = 660 
+processes = 4
+threads = 2
+master = true
+chmod-socket = 660
+vacuum = true
 die-on-term = true
