--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,9 +4,10 @@ upstream frontend {
 upstream backend {
     server backend:3000;
 }
-upstream ml {
-    server ml:5000;
-}
+
+# upstream ml {
+#     server ml:5000;
+# }
 
 server{
     listen 80;
@@ -20,7 +21,8 @@ server{
     }
 
     location /ml {
-        proxy_pass http://ml;
+        include uwsgi_params;
+        uwsgi_pass ml:5000;
     }
 
     location /sockjs-node {
