--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "jwt-decode": "^3.0.0-beta.2",
     "moment": "^2.27.0",
     "quill": "^1.3.7",
+    "quill-delta-to-html": "^0.12.0",
     "quill-image-uploader": "^1.2.2",
     "vue": "^2.6.11",
     "vue-flatpickr-component": "^8.1.6",
