Fix container api request error

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -15,9 +15,8 @@ services:
       dockerfile: Dockerfile
       context: ./ml
     container_name: ml
-    expose:
-        - 5000
-        - 5010
+    ports:
+      - "5000:5000"
 
   nginx:
     restart: always
