--- a/ml/uwsgi.ini
+++ b/ml/uwsgi.ini
@@ -1,11 +1,25 @@
-[uwsgi]
-; tag -> 이게 있어야 uwsgi.ini 인식 가능
-wsgi-file = app.py
-callable = app
-socket = :5000
-processes = 4
-threads = 2
-master = true
-chmod-socket = 660
-vacuum = true
+; [uwsgi]
+; ; tag -> 이게 있어야 uwsgi.ini 인식 가능
+; wsgi-file = app.py
+; callable = app
+; http = :5000
+; processes = 4
+; threads = 2
+; master = true
+; chmod-socket = 660
+; vacuum = true
+; die-on-term = true
+; buffer-size=32768
+
+[uwsgi] 
+chdir=/app
+wsgi-file = /app/app.py 
+callable = app 
+socket = :5000 
+processes = 4 
+threads = 2 
+master = true 
+vacum = true 
+chmod-socket = 660 
 die-on-term = true
+
