--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,9 +5,9 @@ upstream backend {
     server backend:3000;
 }
 
-# upstream ml {
-#     server ml:5000;
-# }
+upstream flask_uwsgi {
+    server ml:5000;
+}
 
 server{
     listen 80;
@@ -22,7 +22,7 @@ server{
 
     location /ml {
         include uwsgi_params;
-        uwsgi_pass ml:5000;
+        uwsgi_pass flask_uwsgi;
     }
 
     location /sockjs-node {
