--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -13,14 +13,20 @@ server{
     listen 80;
 
     location / {
+        proxy_read_timeout 300s;
+        proxy_connect_timeout 75s;
         proxy_pass http://frontend;
     }
 
     location /api {
+        proxy_read_timeout 300s;
+        proxy_connect_timeout 75s;
         proxy_pass http://backend;
     }
 
     location /ml {
+        proxy_read_timeout 300s;
+        proxy_connect_timeout 75s;
         include uwsgi_params;
         uwsgi_pass flask_uwsgi;
     }
